# OxiChat

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  myass.txt
client/src/: client.rs  client_utils.rs  config.rs  error.rs  errors.rs  main.rs  ui.rs  ui_utils.rs  utils.rs
irc/src/: messages.rs
src/: ascii.txt  client.rs  error.rs
