[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = { path = "../irc" }
tokio = { version = "1.36", features = ["full"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
rand = "0.8.5"
